--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 <body>
     <div id="app">
+        <label v-for="label in options">
+            <input type="radio"
+             v-model="current"
+             v-bind:value="label.value">
+             {{ label.label }}
+        </label>
+        {{ computedTodos.length }} 件を表示中
         <table>
             <!-- テーブルヘッダー -->
             <thead>
@@ -23,7 +30,7 @@
             </thead>
             <tbody>
                 <!-- ToDoリストテーブル -->
-                <tr v-for="item in todos" v-bind:key="item.id">
+                <tr v-for="item in computedTodos" v-bind:key="item.id">
                     <th>{{ item.id }}</th>
                     <td>{{ item.comment }}</td>
                     <td class="state">
